<resources>
    <string name="ACCEPT_HANDOVER">ACCEPT_HANDOVER</string>
    <string name="ACCESS_BACKGROUND_LOCATION">后台定位</string>
    <string name="ACCESS_CHECKIN_PROPERTIES">ACCESS_CHECKIN_PROPERTIES</string>
    <string name="ACCESS_COARSE_LOCATION">粗略定位</string>
    <string name="ACCESS_FINE_LOCATION">精准定位</string>
    <string name="ACCESS_LOCATION_EXTRA_COMMANDS">ACCESS_LOCATION_EXTRA_COMMANDS</string>
    <string name="ACCESS_MEDIA_LOCATION">媒体位置权限</string>
    <string name="ACCESS_NETWORK_STATE">访问网络状态</string>
    <string name="ACCESS_NOTIFICATION_POLICY">访问通知策略</string>
    <string name="ACCESS_SUPERUSER">访问超级用户权限</string>
    <string name="ACCESS_WIFI_STATE">访问WIFI状态</string>
    <string name="ACCOUNT_MANAGER">账户管理</string>
    <string name="ACTIVITY_RECOGNITION">ACTIVITY_RECOGNITION</string>
    <string name="ADD_VOICEMAIL">com.android.voicemail.permission.ADD_VOICEMAIL</string>
    <string name="ANSWER_PHONE_CALLS">ANSWER_PHONE_CALLS</string>
    <string name="AUDIO_MEDIA_VOLUME">媒体音量</string>
    <string name="BATTERY_STATS">电池数据</string>
    <string name="BIND_ACCESSIBILITY_SERVICE">绑定辅助服务</string>
    <string name="BIND_APPWIDGET">绑定小部件</string>
    <string name="BIND_AUTOFILL_SERVICE">绑定自动填充服务</string>
    <string name="BIND_CALL_REDIRECTION_SERVICE">绑定呼叫重定向服务</string>
    <string name="BIND_CARRIER_MESSAGING_CLIENT_SERVICE">BIND_CARRIER_MESSAGING_CLIENT_SERVICE</string>
    <string name="BIND_CARRIER_MESSAGING_SERVICE">BIND_CARRIER_MESSAGING_SERVICE</string>
    <string name="BIND_CARRIER_SERVICES">BIND_CARRIER_SERVICES</string>
    <string name="BIND_CHOOSER_TARGET_SERVICE">BIND_CHOOSER_TARGET_SERVICE</string>
    <string name="BIND_CONDITION_PROVIDER_SERVICE">BIND_CONDITION_PROVIDER_SERVICE</string>
    <string name="BIND_CONTROLS">BIND_CONTROLS</string>
    <string name="BIND_DEVICE_ADMIN">设备管理</string>
    <string name="BIND_DREAM_SERVICE">BIND_DREAM_SERVICE</string>
    <string name="BIND_INCALL_SERVICE">BIND_INCALL_SERVICE</string>
    <string name="BIND_INPUT_METHOD">输入法</string>
    <string name="BIND_MIDI_DEVICE_SERVICE">BIND_MIDI_DEVICE_SERVICE</string>
    <string name="BIND_NFC_SERVICE">NFC服务</string>
    <string name="BIND_NOTIFICATION_LISTENER_SERVICE">通知监听服务</string>
    <string name="BIND_PRINT_SERVICE">打印服务</string>
    <string name="BIND_QUICK_ACCESS_WALLET_SERVICE">BIND_QUICK_ACCESS_WALLET_SERVICE</string>
    <string name="BIND_QUICK_SETTINGS_TILE">快速设置磁贴</string>
    <string name="BIND_REMOTEVIEWS">BIND_REMOTEVIEWS</string>
    <string name="BIND_SCREENING_SERVICE">BIND_SCREENING_SERVICE</string>
    <string name="BIND_TELECOM_CONNECTION_SERVICE">BIND_TELECOM_CONNECTION_SERVICE</string>
    <string name="BIND_TEXT_SERVICE">BIND_TEXT_SERVICE</string>
    <string name="BIND_TV_INPUT">BIND_TV_INPUT</string>
    <string name="BIND_VISUAL_VOICEMAIL_SERVICE">BIND_VISUAL_VOICEMAIL_SERVICE</string>
    <string name="BIND_VOICE_INTERACTION">BIND_VOICE_INTERACTION</string>
    <string name="BIND_VPN_SERVICE">VPN服务</string>
    <string name="BIND_VR_LISTENER_SERVICE">BIND_VR_LISTENER_SERVICE</string>
    <string name="BIND_WALLPAPER">壁纸</string>
    <string name="BLUETOOTH">蓝牙</string>
    <string name="BLUETOOTH_ADMIN">蓝牙管理员</string>
    <string name="BLUETOOTH_PRIVILEGED">BLUETOOTH_PRIVILEGED</string>
    <string name="BODY_SENSORS">BODY_SENSORS</string>
    <string name="BROADCAST_PACKAGE_REMOVED">BROADCAST_PACKAGE_REMOVED</string>
    <string name="BROADCAST_SMS">BROADCAST_SMS</string>
    <string name="BROADCAST_STICKY">BROADCAST_STICKY</string>
    <string name="BROADCAST_WAP_PUSH">BROADCAST_WAP_PUSH</string>
    <string name="CALL_COMPANION_APP">CALL_COMPANION_APP</string>
    <string name="CALL_PHONE">拨号</string>
    <string name="CALL_PRIVILEGED">CALL_PRIVILEGED</string>
    <string name="CAMERA">相机</string>
    <string name="CAPTURE_AUDIO_OUTPUT">捕获音频输出</string>
    <string name="CHANGE_COMPONENT_ENABLED_STATE">更改组件启用状态</string>
    <string name="CHANGE_CONFIGURATION">更改配置</string>
    <string name="CHANGE_NETWORK_STATE">更改网络状态E</string>
    <string name="CHANGE_WIFI_MULTICAST_STATE">CHANGE_WIFI_MULTICAST_STATE</string>
    <string name="CHANGE_WIFI_STATE">更改WIFI状态</string>
    <string name="CLEAR_APP_CACHE">清理APP缓存</string>
    <string name="CONTROL_LOCATION_UPDATES">CONTROL_LOCATION_UPDATES</string>
    <string name="DELETE_CACHE_FILES">删除缓存文件</string>
    <string name="DELETE_PACKAGES">删除应用</string>
    <string name="DIAGNOSTIC">DIAGNOSTIC</string>
    <string name="DISABLE_KEYGUARD">禁用锁屏</string>
    <string name="DUMP">DUMP</string>
    <string name="EXPAND_STATUS_BAR">展开状态栏</string>
    <string name="FACTORY_TEST">工厂测试</string>
    <string name="FOREGROUND_SERVICE">前台服务</string>
    <string name="apps_op_backup">Backup App</string>
    <string name="apps_op_backup_desc">Back up the application installation package</string>
    <string name="apps_op_clear">Clear Data</string>
    <string name="apps_op_clear_desc">Delete app data and reclaim storage space</string>
    <string name="apps_op_delete">Delete app</string>
    <string name="apps_op_delete_desc">Delete the installation package of the system app</string>
    <string name="apps_op_dex2oat">Dex2oat</string>
    <string name="apps_op_dex2oat_desc">Dex2oat compile for this app</string>
    <string name="apps_op_frozen_unfrozen">Freeze/thaw</string>
    <string name="apps_op_frozen_unfrozen_desc">Change the frozen or hidden status of an application</string>
    <string name="apps_op_uninstall_updated">Uninstall the update</string>
    <string name="apps_op_uninstall_updated_desc">Rollback to the initial system version</string>
    <string name="apps_op_uninstall_user">Uninstall(Current user)</string>
    <string name="apps_op_uninstall_user_desc">Uninstall only from the current user, other users can continue to use</string>
    <string name="balance">Balance</string>
    <string name="btn_cancel">Cancel</string>
    <string name="download">Download</string>
    <string name="editor_auto_clear">automatic optimization</string>
    <string name="editor_export">Export content</string>
    <string name="editor_import_content">Import content</string>
    <string name="editor_mt">Editing with MT</string>
    <string name="editor_reset">Reset content</string>
    <string name="editor_save">Save changes</string>
    <string name="fast">Fast</string>
    <string name="freezer_auto_import">Automatic import</string>
    <string name="freezer_auto_import_desc">Add the frozen App to App Freezer</string>
    <string name="freezer_clear">Empty the list</string>
    <string name="freezer_clear_desc">Unfreeze all apps and clear this list</string>
    <string name="freezer_freeze_all">Freeze all</string>
    <string name="freezer_freeze_all_desc">Freeze all apps in the current list</string>
    <string name="freezer_freeze_thaw">Freeze/Unfreeze</string>
    <string name="freezer_freeze_thaw_desc">Toggles the frozen state of this app</string>
    <string name="freezer_remove">Exclude from the list</string>
    <string name="freezer_remove_desc">Remove it from the list and defrost it</string>
    <string name="freezer_shortcut_create">Create shortcut</string>
    <string name="freezer_shortcut_create_desc">Add a shortcut for this app to your launcher</string>
    <string name="freezer_shortcuts_create">Create shortcuts</string>
    <string name="freezer_shortcuts_create_desc">Add shortcuts to desktops in batches</string>
    <string name="freezer_unfreeze_all">Unfreeze all</string>
    <string name="freezer_unfreeze_all_desc">Unfreeze all apps in the current list</string>
    <string name="freezer_uninstall">Uninstall the app</string>
    <string name="freezer_uninstall_desc">Uninstall the app (if it can be uninstalled)</string>
    <string name="fs_copy_path">Copy Path</string>
    <string name="fs_multi_select">Multi-select</string>
    <string name="fs_new_file">New File</string>
    <string name="fs_new_folder">New Folder</string>
    <string name="fs_stat_size">Size Stats</string>
    <string name="global_default">Global default</string>
    <string name="performance">Performance</string>
    <string name="power_9008_desc">Restart to 9008 mode for some Qualcomm models available</string>
    <string name="power_9008_edl">9008(EDL)</string>
    <string name="power_fastboot">Fastboot</string>
    <string name="power_fastboot_desc">Restart to Fastboot mode</string>
    <string name="power_hot_reboot">Hot Reboot</string>
    <string name="power_hot_reboot_desc">Reboot the system screen without rebooting the system (possibly causing bugs)</string>
    <string name="power_reboot">Reboot</string>
    <string name="power_reboot_desc">General restart</string>
    <string name="power_recovery">Recovery</string>
    <string name="power_recovery_desc">Restart to recover emergency mode</string>
    <string name="power_shutdown">Shutdown</string>
    <string name="power_shutdown_desc">General shutdown</string>
    <string name="power_title">Please choose</string>
    <string name="powersave">PowerSave</string>
    <string name="schedule_balance_desc">When you go to this app, switch to the [Balance] mode</string>
    <string name="schedule_custom">Custom</string>
    <string name="schedule_custom_desc">Through the graphical interface to set the parameters of each mode</string>
    <string name="schedule_ep">Scene EP</string>
    <string name="schedule_ep_desc">This configuration provides extreme performance and speed</string>
    <string name="schedule_fas">Scene LP</string>
    <string name="schedule_fas_desc">This configuration tends to reduce heat and power</string>
    <string name="schedule_fas_rs">"shadow3'fas-rs"</string>
    <string name="schedule_fas_rs_desc">User space FAS(Frame Aware Scheduling) implementation</string>
    <string name="schedule_fast_desc">When you go to this app, switch to top [Extreme] mode</string>
    <string name="schedule_global_desc">When you go to this app, Switch to the mode specified by the [Global Default]</string>
    <string name="schedule_hp">Scene HP</string>
    <string name="schedule_hp_desc">This configuration focuses more on performance and fluency</string>
    <string name="schedule_keep">Keep mode</string>
    <string name="schedule_keep_desc">Keep the current mode when switching to this application</string>
    <string name="schedule_more">Show More</string>
    <string name="schedule_perf_desc">When you go to this app, switch to [Performance] mode</string>
    <string name="schedule_powersave_desc">When you go to this app, switch to [Efficiency] mode</string>
    <string name="schedule_source_hot">Desirable(third party)</string>
    <string name="schedule_source_others">Others</string>
    <string name="schedule_source_scene">Powered by Scene</string>
    <string name="schedule_title">Choose a mode</string>
    <string name="schedule_uperf">"yc9559'Uperf"</string>
    <string name="schedule_uperf_desc">Uperf designed by yc9559 for snapdragon 888 and older socs</string>
    <string name="schedule_uperf_gt">"yinwanxi'UperfGT"</string>
    <string name="schedule_uperf_gt_desc">Uperf variant, More emphasis on performance</string>
    <string name="swap_module_install_desc">After downloading the module, please install it by yourself via Magisk Manager and reboot your phone!</string>
    <string name="swap_outside_effect1">1.Improve the speed of applying ZRAM, Swapfile settings after phone reboot</string>
    <string name="swap_outside_effect2">2.Adjust LMK parameters according to RAM size to enhance multitasking capability</string>
    <string name="swap_outside_effect3">3.Tweaking VM parameters to improve aggressive ZRAM, Swapfile usage</string>
    <string name="swap_outside_module">External additional(Magisk)module</string>
    <string name="swap_outside_module_desc">You have installed Magisk Manager, it is recommended to download the Enhancement Module to make SWAP control more reliable, which serves the main purpose:</string>
</resources>