<?xml version="1.0" encoding="utf-8"?>
<com.omarea.common.ui.OverScrollView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:orientation="vertical"
        android:paddingLeft="8.0dip"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="8.0dip"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:alpha="0.85">
        <TextView
            android:paddingLeft="10.0dip"
            android:paddingRight="10.0dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/power_title"
            style="@style/textDefault" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8.0dip">
            <com.omarea.ui.OptionItemView
                android:id="@id/power_shutdown"
                android:layout_weight="1.0"
                app:desc="@string/power_shutdown_desc"
                app:iconSrc="@drawable/power_shutdown"
                app:title="@string/power_shutdown"
                style="@style/ListCardItemSmall" />
            <com.omarea.ui.OptionItemView
                android:id="@id/power_reboot"
                android:layout_weight="1.0"
                app:desc="@string/power_reboot_desc"
                app:iconSrc="@drawable/power_reboot"
                app:title="@string/power_reboot"
                style="@style/ListCardItemSmall" />
        </LinearLayout>
        <com.omarea.ui.OptionItemView
            android:id="@id/power_hot_reboot"
            app:desc="@string/power_hot_reboot_desc"
            app:iconSrc="@drawable/power_hot_reboot"
            app:title="@string/power_hot_reboot"
            style="@style/ListCardItemSmall" />
        <com.omarea.ui.OptionItemView
            android:id="@id/power_recovery"
            app:desc="@string/power_recovery_desc"
            app:iconSrc="@drawable/power_recovery"
            app:title="@string/power_recovery"
            style="@style/ListCardItemSmall" />
        <com.omarea.ui.OptionItemView
            android:id="@id/power_fastboot"
            app:desc="@string/power_fastboot_desc"
            app:iconPadding="10.0dip"
            app:iconSrc="@drawable/power_fastboot"
            app:title="@string/power_fastboot"
            style="@style/ListCardItemSmall" />
        <com.omarea.ui.OptionItemView
            android:id="@id/power_emergency"
            app:desc="@string/power_9008_desc"
            app:iconPadding="10.0dip"
            app:iconSrc="@drawable/power_emergency"
            app:title="@string/power_9008_edl"
            style="@style/ListCardItemSmall" />
    </LinearLayout>
</com.omarea.common.ui.OverScrollView>